# feed-span

./: .gitignore  Makefile  OLD_README (scraper, to be integrated).org  OLD_README.org  README.md  db_testing.py  docker-compose.yml  pyproject.toml  sources.csv
components/ranking_server/: classifiers.py  dummy_test.py  ranking_server.py  test_data.py
components/sandbox_worker/: classifiers.py  tasks.py  worker_test.py
components/sandbox_worker/model_bridging/: config.json  logs_dict.json  test_dict.json  tokenizer_config.json
components/scorer_worker/: classifiers.py  scorer_basic.py  tasks.py
components/scorer_worker/model_civic/: config.json
components/scraper_worker/: docker-compose.yml  ingester.py  sources.csv  sources_test.csv  sql_statements.py  tasks.py
components/util/: scheduler.py
docker/: Dockerfile.job_scheduler  Dockerfile.ranking_server  Dockerfile.sandbox_worker  Dockerfile.scorer_worker  Dockerfile.scorer_worker.test_harness  Dockerfile.scraper_worker.ingester  Dockerfile.scraper_worker.scraper
examples/combined/ranking_server/: classifiers.py  ranking_server.py  ranking_server_test.py  test_data.py
examples/combined/sandbox_worker/: classifiers.py  tasks.py  worker.py
examples/combined/scorer_worker/: scorer_basic.py  tasks.py
examples/combined/scraper_worker/: ingester.py  persistence.py  requirements.scraper.txt  sources.csv  tasks.py
