# pyproject.toml

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ranking_challenge_examples"
version = "2.0.0"
description = "The Prosocial Ranking Challenge"
authors = ["Ian Baker <ian@sonic.net>"]
readme = "README.md"
license = "MIT"
homepage = "https://humancompatible.ai/news/2024/01/18/the-prosocial-ranking-challenge-60000-in-prizes-for-better-social-media-algorithms/"
repository = "https://github.com/humancompatibleai/ranking-challenge"
keywords = ["ranking", "social media", "challenge"]

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = ">=2.6.0"
faker = "*"
fastapi = ">=0.110.0"
requests = "*"
flask-cors = "*"
httpx = "*"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
ranking-challenge = "*"
flask = "*"
python-dotenv = "*"
redis = ">= 4.4.4"
psycopg2-binary = "*"
sqlalchemy = "*"
celery-redbeat = "*"
pandas = "^1.4.2"
apify-client = "^1.7.0"
torch = "^2.3.1"
transformers = "^4.41.2"


[tool.poetry.dev-dependencies]
pip-tools = "*"
pytest = "*"
ruff = "*"
pre-commit = "^3.7.1"
fakeredis = "*"

[tool.poetry.extras]
feed_span_ranking_server = ["celery", "uvicorn", "ranking-challenge", "redis", "pytest"]
feed_span_scorer_worker = ["pydantic", "celery", "fastapi", "redis", "pytest", "pandas", "uvicorn", "torch", "transformers"]
feed_span = ["celery", "redis", "pytest", "pandas", "uvicorn", "ranking-challenge", "psycopg2-binary"]
feed_span_job_scheduler = ["celery", "celery-redbeat"]
feed_span_sandbox_worker = ["celery", "redis", "pytest", "pandas", "psycopg2", "celery-redbeat", "sqlalchemy", "psycopg2-binary", "torch", "transformers"]

[tool.poetry.urls]
homepage = "https://humancompatible.ai/news/2024/01/18/the-prosocial-ranking-challenge-60000-in-prizes-for-better-social-media-algorithms/"
repository = "https://github.com/humancompatibleai/ranking-challenge"
blog = "https://rankingchallenge.substack.com/"

[tool.poetry.scripts]
rcfaker = "ranking_challenge.fake:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["E501"]
